fixed scrollbar

--- a/styles.css
+++ b/styles.css
@@ -422,6 +422,9 @@
   .overflow-scroll {
     overflow: scroll;
   }
+  .overflow-y-auto {
+    overflow-y: auto;
+  }
   .overflow-y-scroll {
     overflow-y: scroll;
   }
